# sdeck

./: .env.example  .gitignore  AGENT-MEMORY.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.yml  bug_report.yml  feature_request.yml
.github/agents/: conductor.agent.md  devops.agent.md  engineer.agent.md  ralph.agent.md
.github/prompts/: conductor.agent.md  devops.agent.md  engineer.agent.md
.github/workflows/: ci.yaml
deploy/docker/: Dockerfile  docker-compose.yaml
deploy/ha/: sdeck-dashboard.yaml  sdeck-helpers.yaml
deploy/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
profiles/: defaults.yaml
profiles/devices/: bedroom-one.yaml  bedroom-two.yaml  bedroom.yaml  kitchen.yaml  living-room-music.yaml  living-room.yaml
src/sdeck/: __init__.py  api.py  main.py  profile.py  provisioner.py
src/sdeck/controllers/: __init__.py  audio.py  dashboard.py  eq.py  light.py  playlist.py  timer.py
templates/plus/AudioCard.dui/: manifest.yaml
templates/plus/DashboardCard.dui/: manifest.yaml
templates/plus/IconKey.dui/: manifest.yaml
templates/plus/LightCard.dui/: manifest.yaml
templates/plus/PictureKey.dui/: manifest.yaml
templates/plus/SoundCard.dui/: manifest.yaml
templates/plus/TimerCard.dui/: manifest.yaml
tests/: test_controllers.py  test_main.py  test_profile.py  test_provisioner.py
(+1 files in other folders)
