[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdeck"
version = "0.1.0"
description = "GitOps-driven Stream Deck provisioner for Home Assistant"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "deckui",
    "haclient",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
sdeck = "sdeck.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-PyYAML>=6.0",
]

[tool.uv.sources]
deckui = { git = "https://github.com/graphras-com/DeckUI.git" }
haclient = { git = "https://github.com/graphras-com/HaClient.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/sdeck"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["StreamDeck.*", "cairosvg"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
